--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huzzgram</title>
-    <link rel="icon" type="image/x-icon" href="icon.jpeg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HuzzGram</title>
+
+  <!-- Enable app mode on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+  <!-- App icon -->
+  <link rel="apple-touch-icon" href="icon.jpeg">
+
+  <!-- App name -->
+  <meta name="apple-mobile-web-app-title" content="HuzzGram">
 </head>
 <body>
-    
+  <h1>Welcome to HuzzGram!</h1>
 </body>
 </html>
