--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <!-- App icon -->
-  <link rel="apple-touch-icon" href="icon.jpeg">
+  <link rel="apple-touch-icon" href="ico.jpeg">
 
   <!-- App name -->
   <meta name="apple-mobile-web-app-title" content="HuzzGram">
