--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <meta name="apple-mobile-web-app-title" content="HuzzGram">
 </head>
 <body>
-  <h1>Welcome to HuzzGram!</h1>
+    <iframe width="100vw" height="100vh" src="https://www.instagram.com/ericaaa_r07/embed/" frameborder="0"></iframe>
 </body>
 </html>
